--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -17,6 +17,62 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+const cities = [];
+
+fetch(endpoint)
+  // .then(blob => console.log(blob))
+  .then(blob => blob.json())
+  // .then(data => console.log(data))
+  .then(data => cities.push(...data))
+//fetch itself will return a promise
+
+
+//matching function
+function findMatches(wordToMatch, cities){
+  return cities.filter(place => {
+    //if city matches search
+    const regex = new RegExp(wordToMatch, 'gi');
+    //global and insensitive so disregards case
+    return place.city.match(regex) || place.state.match(regex);
+    //will check if city or state has either one
+    //filter will be run
+  })
+}
+
+function numbWithCommas(x){
+  return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+}
+
+
+//display function
+function displayMatches() {
+  console.log(this.value);
+  const matchArray = findMatches(this.value, cities)
+  console.log(matchArray);
+  const html = matchArray.map(place => {
+    //.replace lines to highlight the matched input
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+    return `
+    <li>
+      <span class="name">${cityName}, ${stateName}</span>
+      <span class="population">${numbWithCommas(place.population)}</span>
+    </li>
+    `;
+  }).join(''); // .map returns an array so this will make it a string
+  suggestions.innerHTML = html;
+}
+
+//what is being searched
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change', displayMatches);
+//change event only fires when you go off that input
+searchInput.addEventListener('keyup', displayMatches);
+
+
 </script>
   </body>
 </html>
