--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,6 +7,71 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.querySelector('#draw');
+  const ctx = canvas.getContext('2d');
+  //resize canvas
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  ctx.strokeStyle = '#BADA55';
+  ctx.lineJoin = 'round';
+  ctx.lineCap = 'round';
+  ctx.lineWidth = 100;
+  // ctx.globalCompositeOperation = 'multiply';
+  //this would be blending the colors on top of each other
+
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let hue = 0;
+  let direction = true;
+  //building up ^
+
+  function draw(e){
+    if (!isDrawing) return;
+    //function won't run if mouse is not down
+    console.log(e);
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+    // ctx.lineWidth = hue;
+    //ctx is where you do all the drawing for the canvas
+    ctx.beginPath();
+    //starting from
+    ctx.moveTo(lastX, lastY);
+    //going to
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+    // lastX = e.offsetX;
+    // lastY = e.offsetY;
+    //or
+
+    //es6
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    //destructuring an array
+    hue++;
+    //if hsl goes over 360, it will keep going
+    if (hue >= 360){
+      hue = 0
+    }
+    //resetting it
+
+    if(ctx.lineWidth >= 100 || ctx.lineWidth <= 1){
+      direction = !direction;
+    }
+    if (direction){
+      ctx.lineWidth++;
+    } else {
+      ctx.lineWidth--;
+    }
+  }
+
+  canvas.addEventListener('mousedown', (e) => {
+    isDrawing = true;
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+  });
+  canvas.addEventListener('mousemove', draw);
+  canvas.addEventListener('mouseup', () =>
+    isDrawing = false);
+  canvas.addEventListener('mouseout', () =>
+    isDrawing = false);
 </script>
 
 <style>
